fix mobile margin issue on mobile

--- a/style.sass
+++ b/style.sass
@@ -75,6 +75,8 @@ header a
     grid-gap: 24px
     grid-template-columns: repeat(auto-fill, minmax(250px,1fr))
     grid-auto-rows: 0
+    margin-top: 24px
+    margin-bottom: 24px
 .card
     position: relative
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 60%, rgba(0, 0, 0, 0.7))
